--- a/src/pages/homepage/homepage.styles.scss
+++ b/src/pages/homepage/homepage.styles.scss
@@ -1,6 +1,37 @@
+
 .homepage {
+  height: 80vh;
+  margin-top: 3vh;
+  width: 100%;
+  background-color: #f1f1f1;
+}
+
+.cards {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  padding: 20px 80px;
+  justify-content: space-between;
+}
+
+.card-center{
+  margin: 7vh 0vw 4vh 0vw;
+  font-size: 18px;
+}
+
+.center{text-align: center;}
+
+.card{
+  //height: 25vh;
+  //width: 20vw;
+  background-color: #FFFFFF;
+  box-sizing: border-box;
+  font-size: 22px;
+  display: inline-block;
+  margin-block-start: 1em;
+  justify-content: space-between;
+  &:first-child{
+    margin-block-start: 2em;
+  }
+  &:last-child{
+    margin-block-end: 2em;
+  }
 }
